add hero section

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
         <li><a href="#">Home4</a></li>
       </ul>
     </header>
+    <main>
+      <section>
+        <h1>Vova pidor</h1>
+      </section>
+    </main>
   </body>
 </html>
