--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
         <h1>Vova pidor</h1>
       </section>
     </main>
+    <footer>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Home2</a></li>
+        <li><a href="#">Home3</a></li>
+        <li><a href="#">Home4</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
