--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <section>
         <h1>Vova pidor</h1>
         <div>sdfvsdsd</div>
-        <p>tgertg</p>
+        <p>tgertg222222222222222222222222222222222222222222222</p>
       </section>
     </main>
     <footer>
